--- a/templates/docs.html
+++ b/templates/docs.html
@@ -333,6 +333,10 @@
         <div id="sideMenu" class="side-menu">
             <span class="close-btn" onclick="closeMenu()">&times;</span>
             <h2>Menu</h2>
+            <a href=/email><i class="fas fa-envelope"></i> Email</a>
+            <a href=/channel><i class="fas fa-tv"></i> Live</a>
+            <a href=/pas><i class="fas fa-key"></i> Password</a>
+            <a href=/age><i class="fas fa-birthday-cake"></i> Age</a>
             <a href="#"><i class="fas fa-home"></i> Home</a>
             <a href="#"><i class="fas fa-info-circle"></i> About</a>
             <a href="#"><i class="fas fa-briefcase"></i> Services</a>
