--- a/templates/profile.html
+++ b/templates/profile.html
@@ -38,28 +38,28 @@
           </div>
         </div>
         <div class="profile-card-social">
-          <a href="https://facebook.com/joshg101" class="profile-card-social__item facebook" target="_blank">
+          <a href="https://www.facebook.com/gamerboymahfuz" class="profile-card-social__item facebook" target="_blank">
             <span class="icon-font">
               <svg class="icon">
                 <use xlink:href="#icon-facebook"></use>
               </svg>
             </span>
           </a>
-          <a href="https://www.instagram.com/joshhhg10" class="profile-card-social__item instagram" target="_blank">
+          <a href="https://www.instagram.com" class="profile-card-social__item instagram" target="_blank">
             <span class="icon-font">
               <svg class="icon">
                 <use xlink:href="#icon-instagram"></use>
               </svg>
             </span>
           </a>
-          <a href="https://github.com/ysauhsoj" class="profile-card-social__item github" target="_blank">
+          <a href="https://github.com/shahariarmahfuz" class="profile-card-social__item github" target="_blank">
             <span class="icon-font">
               <svg class="icon">
                 <use xlink:href="#icon-github"></use>
               </svg>
             </span>
           </a>
-          <a href="https://deku-rest-api-ywad.onrender.com" class="profile-card-social__item link" target="_blank">
+          <a href="https://nekotools.onrender.com" class="profile-card-social__item link" target="_blank">
             <span class="icon-font">
               <svg class="icon">
                 <use xlink:href="#icon-link"></use>
@@ -68,7 +68,7 @@
           </a>
         </div>
         <div class="profile-card-ctr">
-          <a href="https://facebook.com/joshg101">
+          <a href="https://www.facebook.com/gamerboymahfuz">
           <button
             class="profile-card__button button--blue js-message-btn">Message</button>
           </a>
@@ -76,7 +76,7 @@
         <div class="profile-card-ctr">
           <a href="/docs">
           <button
-            class="profile-card__button button--blue js-message-btn">REST API</button>
+            class="profile-card__button button--blue js-message-btn">Tools</button>
           </a>
         </div>
       </div>
