--- a/templates/docs.html
+++ b/templates/docs.html
@@ -336,8 +336,9 @@
             <a href=/email><i class="fas fa-envelope"></i> Email</a>
             <a href=/channel><i class="fas fa-tv"></i> Live</a>
             <a href=/pas><i class="fas fa-key"></i> Password</a>
+            <a herf=/lookup><i class="fas fa-map-marker-al"></i> Ip lookup</a>
             <a href=/age><i class="fas fa-birthday-cake"></i> Age</a>
-            <a href="#"><i class="fas fa-home"></i> Home</a>
+            <a href=/><i class="fas fa-home"></i> Home</a>
             <a href="#"><i class="fas fa-info-circle"></i> About</a>
             <a href="#"><i class="fas fa-briefcase"></i> Services</a>
             <a href="#"><i class="fas fa-phone"></i> Contact</a>
@@ -366,9 +367,9 @@
             <i class="fas fa-envelope"></i>
             <p>Contact Me</p>
             <div class="social-links">
-                <a href="https://www.facebook.com" target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.facebook.com/gamerboymahfuz" target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i></a>
                 <a href="https://www.instagram.com" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="https://github.com" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/shahariarmahfuz" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
                 <a href="https://t.me" target="_blank" title="Telegram"><i class="fab fa-telegram-plane"></i></a>
                 <a href="https://twitter.com" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>
             </div>
