--- a/templates/docs.html
+++ b/templates/docs.html
@@ -336,7 +336,7 @@
             <a href=/email><i class="fas fa-envelope"></i> Email</a>
             <a href=/channel><i class="fas fa-tv"></i> Live</a>
             <a href=/pas><i class="fas fa-key"></i> Password</a>
-            <a herf=/lookup><i class="fas fa-map-marker-al"></i> Ip lookup</a>
+            <a herf=/lookup><i class="fas fa-map-marker-alt"></i> Ip lookup</a>
             <a href=/age><i class="fas fa-birthday-cake"></i> Age</a>
             <a href=/><i class="fas fa-home"></i> Home</a>
             <a href="#"><i class="fas fa-info-circle"></i> About</a>
