--- a/templates/docs.html
+++ b/templates/docs.html
@@ -337,6 +337,7 @@
             <a href=/channel><i class="fas fa-tv"></i> Live</a>
             <a href=/pas><i class="fas fa-key"></i> Password</a>
             <a href=/lookup><i class="fas fa-map-marker-alt"></i> Ip lookup</a>
+            <a href=/source><i class="fas fa-code"></i> Source</a>
             <a href=/age><i class="fas fa-birthday-cake"></i> Age</a>
             <a href=/><i class="fas fa-home"></i> Home</a>
             <a href="#"><i class="fas fa-info-circle"></i> About</a>
