--- a/templates/profile.html
+++ b/templates/profile.html
@@ -15,7 +15,7 @@
   <div class="wrapper">
     <div class="profile-card js-profile-card">
       <div class="profile-card__img">
-        <img src="https://i.ibb.co.com/jJy6HWg/d7a4b46b-cee7-4766-aeab-ebf2a0a3eeb9.jpg" alt="profile card">
+        <img src="https://files.catbox.moe/5c6jsw.jpeg" alt="profile card">
       </div>
       <div class="profile-card__cnt js-profile-cnt">
         <div class="profile-card__name">Shahariar Mahfuz</div>
