--- a/templates/profile.html
+++ b/templates/profile.html
@@ -170,6 +170,7 @@
     </defs>
   </svg>
   <script src="/scripts/profile.js"></script>
+  <script src="/scripts/prohibited.js"></script>
 </body>
 
 </html>
