--- a/templates/channel.html
+++ b/templates/channel.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ channel.name }}</title>
     <link rel="stylesheet" type="text/css" href="clap.css">
-    <link href="https://vjs.zencdn.net/8.3.0/video-js.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.plyr.io/3.6.2/plyr.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co.com/S6jRmvX/Bongo-Flix-2.jpg">
+    <link rel="stylesheet" type="text/css" href="./eamintalukdar.css">
+    <script src="https://cdn.plyr.io/3.6.3/plyr.js"></script>
+    <script type='text/javascript' src='https://content.jwplatform.com/libraries/IDzF9Zmk.js'></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -30,16 +34,15 @@
         }
 
         .video-container {
-            position: relative;
-            padding-bottom: 56.25%; /* 16:9 aspect ratio */
+            width: 100%;
             height: 0;
+            padding-bottom: 56.25%; /* 16:9 aspect ratio */
+            position: relative;
             overflow: hidden;
             margin: 0 auto 20px; /* Center align and margin bottom */
-            max-width: 100%; /* Ensure container doesn't exceed viewport width */
-            width: 100%;
         }
 
-        .video-container video {
+        #my-video {
             position: absolute;
             top: 0;
             left: 0;
@@ -108,26 +111,25 @@
             <h1>{{ channel.name }}</h1>
         </header>
         <div class="video-container">
-            <video id="player" class="video-js vjs-default-skin" controls preload="auto">
-                <source src="{{ channel.url }}" type="application/x-mpegURL">
-            </video>
-            <script src="https://vjs.zencdn.net/8.3.0/video.min.js"></script>
-            <script src="https://unpkg.com/videojs-contrib-quality-levels@latest/dist/videojs-contrib-quality-levels.min.js"></script>
-            <script>
-                var player = videojs('player', {
-                    autoplay: true,
-                    controls: true,
-                    fluid: true, 
-                    techOrder: ["html5"],
-                    sources: [{
-                        src: '{{ channel.url }}',
-                        type: 'application/x-mpegURL'
-                    }]
-                });
-
-                player.qualityLevels(); 
-            </script>
+            <div id="my-video"></div>
         </div>
+
+        <script type="text/javascript">
+            var playerInstance = jwplayer("my-video");
+            playerInstance.setup({
+                file: "{{ channel.url }}",
+                width: "100%",
+                height: "100%",
+                aspectratio: "16:9",
+                controls: true,
+                stretching: "uniform",
+                autostart: true,
+                allowfullscreen: true,
+                skin: {
+                    name: "netflix"
+                }
+            });
+        </script>
 
         <h2>Related Channels</h2>
         <div class="related-channels">
