--- a/templates/channel.html
+++ b/templates/channel.html
@@ -6,10 +6,12 @@
     <title>{{ channel.name }}</title>
     <link rel="stylesheet" type="text/css" href="clap.css">
     <link rel="stylesheet" href="https://cdn.plyr.io/3.6.2/plyr.css" />
+    <link rel="stylesheet" href="https://vjs.zencdn.net/8.3.0/video-js.css">
     <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co.com/S6jRmvX/Bongo-Flix-2.jpg">
     <link rel="stylesheet" type="text/css" href="./eamintalukdar.css">
     <script src="https://cdn.plyr.io/3.6.3/plyr.js"></script>
-    <script type='text/javascript' src='https://content.jwplatform.com/libraries/IDzF9Zmk.js'></script>
+    <script src="https://content.jwplatform.com/libraries/IDzF9Zmk.js"></script>
+    <script src="https://vjs.zencdn.net/8.3.0/video.min.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -111,24 +113,37 @@
             <h1>{{ channel.name }}</h1>
         </header>
         <div class="video-container">
-            <div id="my-video"></div>
+            <div id="my-video" class="video-js vjs-default-skin" controls></div>
         </div>
 
         <script type="text/javascript">
-            var playerInstance = jwplayer("my-video");
-            playerInstance.setup({
-                file: "{{ channel.url }}",
-                width: "100%",
-                height: "100%",
-                aspectratio: "16:9",
-                controls: true,
-                stretching: "uniform",
-                autostart: true,
-                allowfullscreen: true,
-                skin: {
-                    name: "netflix"
-                }
-            });
+            var playerInstance;
+            if ("{{ link_name }}" === "Link 2") {
+                playerInstance = videojs("my-video");
+                playerInstance.src("{{ channel.url }}");
+                playerInstance.width("100%");
+                playerInstance.height("100%");
+                playerInstance.autoplay(true);
+                playerInstance.controls(true);
+                playerInstance.on('ready', function() {
+                    this.play();
+                });
+            } else {
+                playerInstance = jwplayer("my-video");
+                playerInstance.setup({
+                    file: "{{ channel.url }}",
+                    width: "100%",
+                    height: "100%",
+                    aspectratio: "16:9",
+                    controls: true,
+                    stretching: "uniform",
+                    autostart: true,
+                    allowfullscreen: true,
+                    skin: {
+                        name: "netflix"
+                    }
+                });
+            }
         </script>
 
         <h2>Related Channels</h2>
