--- a/templates/channel.html
+++ b/templates/channel.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.plyr.io/3.6.2/plyr.css" />
     <link rel="stylesheet" href="https://vjs.zencdn.net/8.3.0/video-js.css">
     <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co.com/S6jRmvX/Bongo-Flix-2.jpg">
-    <link rel="stylesheet" type="text/css" href="./eamintalukdar.css">
+    <link rel="stylesheet" type="text/css" href="/static/eamintalukdar.css">
     <script src="https://cdn.plyr.io/3.6.3/plyr.js"></script>
     <script src="https://content.jwplatform.com/libraries/IDzF9Zmk.js"></script>
     <script src="https://vjs.zencdn.net/8.3.0/video.min.js"></script>
