--- a/templates/channel.html
+++ b/templates/channel.html
@@ -5,13 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ channel.name }}</title>
     <link rel="stylesheet" type="text/css" href="clap.css">
-    <link rel="stylesheet" href="https://cdn.plyr.io/3.6.2/plyr.css" />
-    <link rel="stylesheet" href="https://vjs.zencdn.net/8.3.0/video-js.css">
-    <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co.com/S6jRmvX/Bongo-Flix-2.jpg">
-    <link rel="stylesheet" type="text/css" href="/static/eamintalukdar.css">
-    <script src="https://cdn.plyr.io/3.6.3/plyr.js"></script>
-    <script src="https://content.jwplatform.com/libraries/IDzF9Zmk.js"></script>
-    <script src="https://vjs.zencdn.net/8.3.0/video.min.js"></script>
+    <link href="https://vjs.zencdn.net/8.3.0/video-js.css" rel="stylesheet" />
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -36,15 +30,16 @@
         }
 
         .video-container {
-            width: 100%;
-            height: 0;
-            padding-bottom: 56.25%; /* 16:9 aspect ratio */
             position: relative;
+            padding-bottom: 56.25%; /* 16:9 aspect ratio */
+            height: 0;
             overflow: hidden;
             margin: 0 auto 20px; /* Center align and margin bottom */
+            max-width: 100%; /* Ensure container doesn't exceed viewport width */
+            width: 100%;
         }
 
-        #my-video {
+        #player {
             position: absolute;
             top: 0;
             left: 0;
@@ -113,38 +108,44 @@
             <h1>{{ channel.name }}</h1>
         </header>
         <div class="video-container">
-            <div id="my-video" class="video-js vjs-default-skin" controls></div>
-        </div>
+            <div id="player"></div>
+            <script src="https://cdn.jsdelivr.net/clappr/latest/clappr.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/clappr/latest/plugins/HLS.min.js"></script>
+            <script src="https://vjs.zencdn.net/8.3.0/video.min.js"></script>
+            <script>
+                var player;
 
-        <script type="text/javascript">
-            var playerInstance;
-            if ("{{ link_name }}" === "Link 2") {
-                playerInstance = videojs("my-video");
-                playerInstance.src("{{ channel.url }}");
-                playerInstance.width("100%");
-                playerInstance.height("100%");
-                playerInstance.autoplay(true);
-                playerInstance.controls(true);
-                playerInstance.on('ready', function() {
-                    this.play();
-                });
-            } else {
-                playerInstance = jwplayer("my-video");
-                playerInstance.setup({
-                    file: "{{ channel.url }}",
-                    width: "100%",
-                    height: "100%",
-                    aspectratio: "16:9",
-                    controls: true,
-                    stretching: "uniform",
-                    autostart: true,
-                    allowfullscreen: true,
-                    skin: {
-                        name: "netflix"
-                    }
-                });
-            }
-        </script>
+                // Conditional logic to choose the player based on link_name
+                if ("{{ link_name }}" === "Link 1") {
+                    // Clappr player for Link 1
+                    player = new Clappr.Player({
+                        source: '{{ channel.url }}',
+                        mimeType: 'application/x-mpegURL', // Explicitly set MIME type for HLS
+                        width: '100%',
+                        height: '100%',
+                        autoPlay: true,
+                        plugins: [Clappr.HLS], // Use the correct HLS plugin reference
+                        parentId: "#player",
+                    });
+                } else {
+                    // Video.js player for other links
+                    player = videojs('player', {
+                        controls: true,
+                        autoplay: true,
+                        preload: 'auto',
+                        html5: {
+                            hls: {
+                                overrideNative: true // Force HLS playback even if browser supports it natively
+                            }
+                        }
+                    });
+                    player.src({
+                        src: '{{ channel.url }}',
+                        type: 'application/x-mpegURL'
+                    });
+                }
+            </script>
+        </div>
 
         <h2>Related Channels</h2>
         <div class="related-channels">
