--- a/templates/channel.html
+++ b/templates/channel.html
@@ -39,7 +39,7 @@
             width: 100%;
         }
 
-        #player {
+        .video-container video {
             position: absolute;
             top: 0;
             left: 0;
@@ -108,42 +108,24 @@
             <h1>{{ channel.name }}</h1>
         </header>
         <div class="video-container">
-            <div id="player"></div>
-            <script src="https://cdn.jsdelivr.net/clappr/latest/clappr.min.js"></script>
-            <script src="https://cdn.jsdelivr.net/clappr/latest/plugins/HLS.min.js"></script>
+            <video id="player" class="video-js vjs-default-skin" controls preload="auto">
+                <source src="{{ channel.url }}" type="application/x-mpegURL">
+            </video>
             <script src="https://vjs.zencdn.net/8.3.0/video.min.js"></script>
+            <script src="https://unpkg.com/videojs-contrib-quality-levels@latest/dist/videojs-contrib-quality-levels.min.js"></script>
             <script>
-                var player;
-
-                // Conditional logic to choose the player based on link_name
-                if ("{{ link_name }}" === "Link 1") {
-                    // Clappr player for Link 1
-                    player = new Clappr.Player({
-                        source: '{{ channel.url }}',
-                        mimeType: 'application/x-mpegURL', // Explicitly set MIME type for HLS
-                        width: '100%',
-                        height: '100%',
-                        autoPlay: true,
-                        plugins: [Clappr.HLS], // Use the correct HLS plugin reference
-                        parentId: "#player",
-                    });
-                } else {
-                    // Video.js player for other links
-                    player = videojs('player', {
-                        controls: true,
-                        autoplay: true,
-                        preload: 'auto',
-                        html5: {
-                            hls: {
-                                overrideNative: true // Force HLS playback even if browser supports it natively
-                            }
-                        }
-                    });
-                    player.src({
+                var player = videojs('player', {
+                    autoplay: true,
+                    controls: true,
+                    fluid: true, 
+                    techOrder: ["html5"],
+                    sources: [{
                         src: '{{ channel.url }}',
                         type: 'application/x-mpegURL'
-                    });
-                }
+                    }]
+                });
+
+                player.qualityLevels(); 
             </script>
         </div>
 
