--- a/templates/docs.html
+++ b/templates/docs.html
@@ -389,6 +389,7 @@ h1 {
             <a href="/source"><i class="fas fa-code"></i> Source</a>
             <a href="/age"><i class="fas fa-birthday-cake"></i> Age</a>
             <a href="/translate"><i class="fas fa-comments icon"></i> Translator</a>
+            <a href="/currency"><i class="fas fa-chart-line"></i> Currency </a>
             <a href="/"><i class="fas fa-home"></i> Home</a>
             <a href="#"><i class="fas fa-info-circle"></i> About</a>
             <a href="#"><i class="fas fa-briefcase"></i> Services</a>
