--- a/templates/channel.html
+++ b/templates/channel.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ channel.name }}</title>
     <link rel="stylesheet" type="text/css" href="clap.css">
+    <link rel="shortcut icon" type="image/jpeg" href="https://i.ibb.co/55Zxz5V/20240921-071634.jpg" sizes="72x72">
     <link href="https://vjs.zencdn.net/8.3.0/video-js.css" rel="stylesheet" />
     <style>
         body {
