--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live TV Streaming</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="shortcut icon" type="image/jpeg" href="https://i.ibb.co/55Zxz5V/20240921-071634.jpg" sizes="72x72">
     <style>
         body {
             font-family: 'Arial', sans-serif;
