--- a/templates/calculator.html
+++ b/templates/calculator.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Age Calculator</title>
     <link rel="stylesheet" href="/static/calculator.css"> 
+    <link rel="shortcut icon" type="image/jpeg" href="https://i.ibb.co/55Zxz5V/20240921-071634.jpg" sizes="72x72">
 </head>
 <body>
     <div class="container">
