--- a/templates/email.html
+++ b/templates/email.html
@@ -6,7 +6,7 @@
     <title>Random Email Generator</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="/static/email.css">
-    <link rel="shortcut icon" type="image/jpeg" href="https://i.ibb.co/55Zxz5V/20240921-071634.jpg" sizes="72x72">
+    <link rel="shortcut icon" type="image/jpeg" href="https://i.ibb.co/bs9tcYn/20240921-132608.png" sizes="72x72">
 </head>
 <body>
     <h1><i class="fas fa-envelope"></i> Random Email Generator</h1>
