--- a/templates/docs.html
+++ b/templates/docs.html
@@ -6,7 +6,7 @@
     <title>Browser Details with Premium Menu</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" type="image/jpeg" href="" sizes="120x120">
+    <link rel="shortcut icon" type="image/jpeg" href="https://i.postimg.cc/KvBMZpDZ/20240921-203016.jpg" sizes="120x120">
 
     <style>
 body {
