--- a/templates/cc.html
+++ b/templates/cc.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>m3u8 Link Extractor</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;500&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" type="image/jpeg" href="https://i.postimg.cc/KvBMZpDZ/20240921-203016.jpg" sizes="120x120">
     <style>
         body {
             font-family: 'Raleway', sans-serif;
