--- a/templates/profile.html
+++ b/templates/profile.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <script src="https://cdn.jsdelivr.net/npm/howler@2.2.4/dist/howler.min.js"></script>
   <link rel="stylesheet" href="/static/profile.css">
-  <link rel="shortcut icon" type="image/jpeg" href="https://i.ibb.co/bs9tcYn/20240921-132608.png" sizes="72x72">
+  <link rel="shortcut icon" type="image/jpeg" href="https://i.postimg.cc/KvBMZpDZ/20240921-203016.jpg" sizes="72x72">
 </head>
 
 <body>
