--- a/templates/currency.html
+++ b/templates/currency.html
@@ -7,7 +7,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="shortcut icon" type="image/jpeg" href="https://i.ibb.co/bs9tcYn/20240921-132608.png" sizes="72x72">
+    <link rel="shortcut icon" type="image/jpeg" href="https://i.postimg.cc/KvBMZpDZ/20240921-203016.jpg" sizes="72x72">
     <style>
         body {
             font-family: 'Raleway', sans-serif;
